src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__collection_option_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    fn builder() -> NewFooBuilder {
        __foo_new_builder::new()
    }
}
///Autogenerated by buildstructor
type NewFooBuilder = __foo_new_builder::__FooBuilder<
    (__foo_new_builder::__Optional<HashMap<Option<String>, Option<String>>>,),
>;
mod __foo_new_builder {
    use super::*;
    #[inline(always)]
    pub(super) fn new() -> __FooBuilder<
        (__foo_new_builder::__Optional<HashMap<Option<String>, Option<String>>>,),
    > {
        __FooBuilder {
            fields: (__optional(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _uninit: std::mem::MaybeUninit<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _uninit: std::mem::MaybeUninit::uninit(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __FooBuilder<__P> {
        fields: __P,
        _phantom: core::marker::PhantomData<()>,
    }
    impl __FooBuilder<(__Optional<HashMap<Option<String>, Option<String>>>,)> {
        #[inline(always)]
        pub(super) fn param(
            mut self,
            param: HashMap<Option<String>, Option<String>>,
        ) -> __FooBuilder<(__Optional<HashMap<Option<String>, Option<String>>>,)> {
            self.fields
                .0
                .lazy
                .get_or_insert_with(|| core::default::Default::default())
                .extend(param.into_iter());
            self
        }
        #[inline(always)]
        pub(super) fn param_entry(
            mut self,
            key: Option<String>,
            value: Option<String>,
        ) -> __FooBuilder<(__Optional<HashMap<Option<String>, Option<String>>>,)> {
            self.fields
                .0
                .lazy
                .get_or_insert_with(|| core::default::Default::default())
                .insert(key, value);
            self
        }
    }
    impl<
        __P0: Into<__Set<HashMap<Option<String>, Option<String>>>>,
    > __FooBuilder<(__P0,)> {
        #[inline(always)]
        pub(super) fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}

