src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__multi_field_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    fn builder() -> __foo_new_builder::__FooBuilder<
            (__foo_new_builder::__Required<usize>, __foo_new_builder::__Required<usize>),
        > {
        __foo_new_builder::new()
    }
}
mod __foo_new_builder {
    use super::*;
    pub fn new() -> __FooBuilder<
            (__foo_new_builder::__Required<usize>, __foo_new_builder::__Required<usize>),
        > {
        __FooBuilder {
            fields: (__required(), __required()),
            phantom: core::default::Default::default(),
        }
    }
    pub struct __Required<T> {
        phantom: std::marker::PhantomData<T>,
    }
    pub struct __Optional<T> {
        lazy: Option<T>,
    }
    pub struct __Set<T> {
        value: T,
    }
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            phantom: core::default::Default::default(),
        }
    }
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub struct __FooBuilder<__P> {
        fields: __P,
        phantom: (),
    }
    impl<__1> __FooBuilder<(__Required<usize>, __1)> {
        pub fn simple(self, simple: usize) -> __FooBuilder<(__Set<usize>, __1)> {
            __FooBuilder {
                fields: (__set(simple), self.fields.1),
                phantom: core::default::Default::default(),
            }
        }
    }
    impl<__0> __FooBuilder<(__0, __Required<usize>)> {
        pub fn simple2(self, simple2: usize) -> __FooBuilder<(__0, __Set<usize>)> {
            __FooBuilder {
                fields: (self.fields.0, __set(simple2)),
                phantom: core::default::Default::default(),
            }
        }
    }
    impl<__P0: Into<__Set<usize>>, __P1: Into<__Set<usize>>> __FooBuilder<(__P0, __P1)> {
        pub fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value, self.fields.1.into().value)
        }
    }
}

